--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -32,7 +32,7 @@
   "an7.67:13.2": "dann nennt man sie eine königliche Grenzfestung, die nicht von äußeren Feinden und Gegnern überrannt werden kann. ",
   "an7.67:13.3": "Ebenso ist es, wenn ein edler Schüler sieben gute Eigenschaften besitzt und die vier Vertiefungen – Zustände wonnevoller Meditation in diesem Leben, die zum hohen Geist gehören – erlangt, wann immer er will, ohne Mühe und Not: ",
   "an7.67:13.4": "Dann nennt man ihn einen edlen Schüler, der nicht von Māra, dem Bösen, überrannt werden kann. ",
-  "an7.67:13.5": "Was sind die sieben guten Eigenschaften, die sie besitzt? ",
+  "an7.67:13.5": "Was sind die sieben guten Eigenschaften, die er besitzt? ",
   "an7.67:14.1": "So wie eine Festung eine Säule hat, die tief eingebettet und fest verankert ist, unerschütterlich und unverrückbar, um die, die drinnen sind, zu schützen und die, die draußen sind, abzuwehren, ",
   "an7.67:14.2": "ebenso hat eine edle Schülerin Vertrauen zum Erwachen des Klargewordenen: ",
   "an7.67:14.3": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, höchster Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
