--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "an7.67:13.4": "Dann nennt man ihn einen edlen Schüler, der nicht von Māra, dem Bösen, überrannt werden kann. ",
   "an7.67:13.5": "Was sind die sieben guten Eigenschaften, die er besitzt? ",
   "an7.67:14.1": "So wie eine Festung eine Säule hat, die tief eingebettet und fest verankert ist, unerschütterlich und unverrückbar, um die, die drinnen sind, zu schützen und die, die draußen sind, abzuwehren, ",
-  "an7.67:14.2": "ebenso hat eine edle Schülerin Vertrauen zum Erwachen des Klargewordenen: ",
+  "an7.67:14.2": "ebenso hat ein edler Schüler Vertrauen zum Erwachen des Klargewordenen: ",
   "an7.67:14.3": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, höchster Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
   "an7.67:14.4": "Eine edle Schülerin mit Vertrauen als Säule gibt das Untaugliche auf und entwickelt das Taugliche, ",
   "an7.67:14.5": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
