--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "an7.67:14.2": "ebenso hat ein edler Schüler Vertrauen zum Erwachen des Klargewordenen: ",
   "an7.67:14.3": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, höchster Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
   "an7.67:14.4": "Ein edler Schüler mit Vertrauen als Säule gibt das Untaugliche auf und entwickelt das Taugliche, ",
-  "an7.67:14.5": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
+  "an7.67:14.5": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:14.6": "und ist innerlich rein. ",
   "an7.67:14.7": "Das ist die erste gute Eigenschaft, die sie besitzt. ",
   "an7.67:15.1": "So wie eine Festung einen Graben hat, der tief und breit ist, ",
