--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "an7.67:15.1": "So wie eine Festung einen Graben hat, der tief und breit ist, ",
   "an7.67:15.2": "ebenso hat ein edler Schüler ein Gewissen. Er hat Gewissensbisse bei Fehlverhalten mit dem Körper, der Sprache und dem Geist und beim Erwerb schlechter, untauglicher Eigenschaften. ",
   "an7.67:15.3": "Ein edler Schüler mit einem Gewissen als Graben gibt das Untaugliche auf und entwickelt das Taugliche, ",
-  "an7.67:15.4": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
+  "an7.67:15.4": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:15.5": "und ist innerlich rein. ",
   "an7.67:15.6": "Das ist die zweite gute Eigenschaft, die sie besitzt. ",
   "an7.67:16.1": "So wie eine Festung einen Patrouillenweg hat, der hoch und breit ist, ",
