--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an7.67:16.1": "So wie eine Festung einen Patrouillenweg hat, der hoch und breit ist, ",
   "an7.67:16.2": "ebenso ist ein edler Schüler besonnen. Er ist besonnen, wenn es um Fehlverhalten mit dem Körper, der Sprache und dem Geist und um den Erwerb schlechter, untauglicher Eigenschaften geht. ",
   "an7.67:16.3": "Ein edler Schüler mit Besonnenheit als Patrouillenweg gibt das Untaugliche auf und entwickelt das Taugliche, ",
-  "an7.67:16.4": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
+  "an7.67:16.4": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:16.5": "und ist innerlich rein. ",
   "an7.67:16.6": "Das ist die dritte gute Eigenschaft, die sie besitzt. ",
   "an7.67:17.1": "So wie eine Festung große Waffenlager hat sowohl mit Geschossen als auch mit Handwaffen, ",
