--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -55,7 +55,7 @@
   "an7.67:17.1": "So wie eine Festung große Waffenlager hat sowohl mit Geschossen als auch mit Handwaffen, ",
   "an7.67:17.2": "ebenso ist ein edler Schüler sehr gelehrt, erinnert und behält, was er gehört hat: diese Lehren, die am Anfang gut sind, in der Mitte gut sind und am Ende gut sind, bedeutsam und gut ausgedrückt; die eine geistliche Übung beschreiben, die in sich geschlossen und rein ist. In diesen Lehren ist er sehr bewandert, erinnert sie, festigt sie, indem er sie aufsagt, prüft sie mit dem Geist und erfasst sie gedanklich. ",
   "an7.67:17.3": "Ein edler Schüler mit Gelehrsamkeit als Waffe gibt das Untaugliche auf und entwickelt das Taugliche, ",
-  "an7.67:17.4": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
+  "an7.67:17.4": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:17.5": "und ist innerlich rein. ",
   "an7.67:17.6": "Das ist die vierte gute Eigenschaft, die sie besitzt. ",
   "an7.67:18.1": "So wie in einer Festung viele Arten von Streitkräften leben … ",
