--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -61,7 +61,7 @@
   "an7.67:18.1": "So wie in einer Festung viele Arten von Streitkräften leben … ",
   "an7.67:18.3": "ebenso ist ein edler Schüler energisch. Er lebt so, dass er seine Energie aufrüttelt, um untaugliche Eigenschaften aufzugeben und sich taugliche Eigenschaften zu eigen zu machen. Er ist stark, standhaft strebsam, und lässt nicht nach beim Entwickeln tauglicher Eigenschaften. ",
   "an7.67:18.4": "Ein edler Schüler mit Energie als seinen Streitkräften gibt das Untaugliche auf und entwickelt das Taugliche, ",
-  "an7.67:18.5": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
+  "an7.67:18.5": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:18.6": "und ist innerlich rein. ",
   "an7.67:18.7": "Das ist die fünfte gute Eigenschaft, die sie besitzt. ",
   "an7.67:19.1": "So wie eine Festung einen Torhüter hat, der klug, fähig und verständig ist, der Fremde draußen lässt und Bekannte einlässt, ",
