--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -63,7 +63,7 @@
   "an7.67:18.4": "Ein edler Schüler mit Energie als seinen Streitkräften gibt das Untaugliche auf und entwickelt das Taugliche, ",
   "an7.67:18.5": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:18.6": "und ist innerlich rein. ",
-  "an7.67:18.7": "Das ist die fünfte gute Eigenschaft, die sie besitzt. ",
+  "an7.67:18.7": "Das ist die fünfte gute Eigenschaft, die er besitzt. ",
   "an7.67:19.1": "So wie eine Festung einen Torhüter hat, der klug, fähig und verständig ist, der Fremde draußen lässt und Bekannte einlässt, ",
   "an7.67:19.2": "ebenso ist eine edle Schülerin achtsam. Sie besitzt äußerste Achtsamkeit und Wachheit, und an Dinge, die vor langer Zeit getan oder gesagt wurden, kann sie sich erinnern und sie sich ins Gedächtnis rufen. ",
   "an7.67:19.3": "Eine edle Schülerin mit Achtsamkeit als Torhüter gibt das Untaugliche auf und entwickelt das Taugliche, ",
