--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -67,7 +67,7 @@
   "an7.67:19.1": "So wie eine Festung einen Torhüter hat, der klug, fähig und verständig ist, der Fremde draußen lässt und Bekannte einlässt, ",
   "an7.67:19.2": "ebenso ist ein edler Schüler achtsam. Er besitzt äußerste Achtsamkeit und Wachheit, und an Dinge, die vor langer Zeit getan oder gesagt wurden, kann er sich erinnern und sie sich ins Gedächtnis rufen. ",
   "an7.67:19.3": "Ein edler Schüler mit Achtsamkeit als Torhüter gibt das Untaugliche auf und entwickelt das Taugliche, ",
-  "an7.67:19.4": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
+  "an7.67:19.4": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:19.5": "und ist innerlich rein. ",
   "an7.67:19.6": "Das ist die sechste gute Eigenschaft, die sie besitzt. ",
   "an7.67:20.1": "So wie eine Festung einen Wall hat, der hoch und breit und mit einem Verputz versehen ist, um die, die drinnen sind, zu schützen und die, die draußen sind, abzuwehren, ",
