--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -73,7 +73,7 @@
   "an7.67:20.1": "So wie eine Festung einen Wall hat, der hoch und breit und mit einem Verputz versehen ist, um die, die drinnen sind, zu schützen und die, die draußen sind, abzuwehren, ",
   "an7.67:20.2": "ebenso ist ein edler Schüler weise. Er besitzt die Erkenntnis des Entstehens und Vergehens, die edel und durchdringend ist und zum völligen Beenden des Leidens führt. ",
   "an7.67:20.3": "Ein edler Schüler mit Weisheit als Wall gibt das Untaugliche auf und entwickelt das Taugliche, ",
-  "an7.67:20.4": "sie gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
+  "an7.67:20.4": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:20.5": "und ist innerlich rein. ",
   "an7.67:20.6": "Das ist die siebte gute Eigenschaft, die sie besitzt. ",
   "an7.67:20.7": "Das sind die sieben guten Eigenschaften, die eine edle Schülerin besitzt. ",
