--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -75,7 +75,7 @@
   "an7.67:20.3": "Ein edler Schüler mit Weisheit als Wall gibt das Untaugliche auf und entwickelt das Taugliche, ",
   "an7.67:20.4": "er gibt das Tadelnswerte auf und entwickelt das, was ohne Tadel ist, ",
   "an7.67:20.5": "und ist innerlich rein. ",
-  "an7.67:20.6": "Das ist die siebte gute Eigenschaft, die sie besitzt. ",
+  "an7.67:20.6": "Das ist die siebte gute Eigenschaft, die er besitzt. ",
   "an7.67:20.7": "Das sind die sieben guten Eigenschaften, die eine edle Schülerin besitzt. ",
   "an7.67:21.1": "Und was sind die vier Vertiefungen – Zustände wonnevoller Meditation in diesem Leben, die zum hohen Geist gehören –, die sie erlangt, wann immer sie will, ohne Mühe und Not? ",
   "an7.67:21.2": "So wie eine königliche Grenzfestung viel Heu, Holz und Wasser eingelagert hat, um denen, die drinnen sind, zum Vergnügen, zur Annehmlichkeit und Bequemlichkeit zu dienen und die, die draußen sind, abzuwehren, ",
