--- a/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.67_translation-de-sabbamitta.json
@@ -93,5 +93,5 @@
   "an7.67:24.4": "Das dient ihm selbst zum Vergnügen, zur Annehmlichkeit und Bequemlichkeit und dazu, beim Erlöschen anzukommen. ",
   "an7.67:24.5": "Das sind die vier Vertiefungen – Zustände wonnevoller Meditation in diesem Leben, die zum hohen Geist gehören –, die er erlangt, wann immer er will, ohne Mühe und Not. ",
   "an7.67:25.1": "Wenn ein edler Schüler diese sieben guten Eigenschaften besitzt und die vier Vertiefungen – Zustände wonnevoller Meditation in diesem Leben, die zum hohen Geist gehören – erlangt, wann immer er will, ohne Mühe und Not, ",
-  "an7.67:25.2": "dann nennt man sie eine edle Schülerin, die nicht von Māra, dem Bösen, überrannt werden kann.“ "
+  "an7.67:25.2": "dann nennt man ihn einen edlen Schüler, der nicht von Māra, dem Bösen, überrannt werden kann.“ "
 }
