--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "dn29:4.6": "Denn dein Lehrer ist nicht erwacht, und seine Lehre ist dürftig erklärt und vorgelegt, sie macht nicht unabhängig, führt nicht zum Frieden, ist nicht von einem vollkommen erwachten Buddha verkündet. ",
   "dn29:4.7": "Aber du übst nicht im Einklang mit dieser Lehre, übst nicht, indem du der Lehre richtig folgst, lebst nicht im Einklang mit der Lehre. Du wendest dich von der Anleitung des Lehrers ab und gehst weiter.‘ ",
   "dn29:4.8": "In einem solchen Fall sind der Lehrer und die Lehre zu tadeln, aber der Schüler verdient Lob. ",
-  "dn29:4.9": "Angenommen, jemand sagte zu einer solchen Schülerin: ",
+  "dn29:4.9": "Angenommen, jemand sagte zu einem solchen Schüler: ",
   "dn29:4.10": "‚Komm, Ehrwürdige, übe, wie es von deinem Lehrer gelehrt und gezeigt wurde.‘ ",
   "dn29:4.11": "Derjenige, der jemandem dazu rät, derjenige, dem dazu geraten wird, und derjenige, der danach übt, sie alle schaffen viel schlechtes Karma. ",
   "dn29:4.12": "Und warum? ",
