--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "dn29:5.4": "‚Es ist dein Pech, werter Freund, dein Missgeschick! Denn dein Lehrer ist nicht erwacht, und seine Lehre ist dürftig erklärt und vorgelegt, sie macht nicht unabhängig, führt nicht zum Frieden, ist nicht von einem vollkommen erwachten Buddha verkündet. ",
   "dn29:5.5": "Und du übst im Einklang mit dieser Lehre, du übst, indem du der Lehre richtig folgst, du lebst im Einklang mit der Lehre. Du hast dich auf diese Lehre eingelassen und gehst weiter.‘ ",
   "dn29:5.6": "In einem solchen Fall sind der Lehrer, die Lehre und der Schüler zu tadeln. ",
-  "dn29:5.7": "Angenommen, jemand sagte zu einer solchen Schülerin: ",
+  "dn29:5.7": "Angenommen, jemand sagte zu einem solchen Schüler: ",
   "dn29:5.8": "‚Die Ehrwürdige übt offensichtlich methodisch und wird die Methode erfolgreich zu Ende führen.‘ ",
   "dn29:5.9": "Derjenige, der jemanden dafür lobt, derjenige, der dafür gelobt wird, und derjenige, der durch das Lob noch mehr Energie aufrüttelt, sie alle schaffen viel schlechtes Karma. ",
   "dn29:5.10": "Und warum? ",
