--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -47,7 +47,7 @@
   "dn29:6.5": "Aber du übst nicht im Einklang mit dieser Lehre, übst nicht, indem du der Lehre richtig folgst, lebst nicht im Einklang mit der Lehre. Du wendest dich von der Anleitung des Lehrers ab und gehst weiter.‘ ",
   "dn29:6.6": "In einem solchen Fall sind der Lehrer und die Lehre zu loben, aber der Schüler verdient Tadel. ",
   "dn29:6.7": "Angenommen, jemand sagte zu einem solchen Schüler: ",
-  "dn29:6.8": "‚Komm, Ehrwürdige, übe, wie es von deinem Lehrer gelehrt und gezeigt wurde.‘ ",
+  "dn29:6.8": "‚Komm, Ehrwürdiger, übe, wie es von deinem Lehrer gelehrt und gezeigt wurde.‘ ",
   "dn29:6.9": "Derjenige, der jemandem dazu rät, derjenige, dem dazu geraten wird, und derjenige, der danach übt, sie alle schaffen viel Verdienst. ",
   "dn29:6.10": "Und warum? ",
   "dn29:6.11": "Weil diese Lehre und Schulung gut erklärt und vorgelegt ist, weil sie unabhängig macht, zum Frieden führt, von einem vollkommen erwachten Buddha verkündet ist. ",
