--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -54,7 +54,7 @@
   "dn29:7.1": "Dann ist da ein Lehrer erwacht, und die Lehre ist gut erklärt und vorgelegt, sie macht unabhängig, führt zum Frieden, ist von einem vollkommen erwachten Buddha verkündet. ",
   "dn29:7.2": "Ein Schüler in dieser Lehre übt im Einklang mit den Lehren, übt, indem er der Lehre richtig folgt, lebt im Einklang mit der Lehre. Er hat sich auf diese Lehre eingelassen und geht weiter. ",
   "dn29:7.3": "Ihm solltet ihr sagen: ",
-  "dn29:7.4": "‚Du hast Glück, werte Freundin, so großes Glück! ",
+  "dn29:7.4": "‚Du hast Glück, werter Freund, so großes Glück! ",
   "dn29:7.5": "Denn dein Lehrer ist erwacht, und seine Lehre ist gut erklärt und vorgelegt, sie macht unabhängig, führt zum Frieden, ist von einem vollkommen erwachten Buddha verkündet. ",
   "dn29:7.6": "Und du übst im Einklang mit dieser Lehre, du übst, indem du der Lehre richtig folgst, du lebst im Einklang mit der Lehre. Du hast dich auf diese Lehre eingelassen und gehst weiter.‘ ",
   "dn29:7.7": "In einem solchen Fall sind der Lehrer, die Lehre und die Schülerin zu loben. ",
