--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -57,7 +57,7 @@
   "dn29:7.4": "‚Du hast Glück, werter Freund, so großes Glück! ",
   "dn29:7.5": "Denn dein Lehrer ist erwacht, und seine Lehre ist gut erklärt und vorgelegt, sie macht unabhängig, führt zum Frieden, ist von einem vollkommen erwachten Buddha verkündet. ",
   "dn29:7.6": "Und du übst im Einklang mit dieser Lehre, du übst, indem du der Lehre richtig folgst, du lebst im Einklang mit der Lehre. Du hast dich auf diese Lehre eingelassen und gehst weiter.‘ ",
-  "dn29:7.7": "In einem solchen Fall sind der Lehrer, die Lehre und die Schülerin zu loben. ",
+  "dn29:7.7": "In einem solchen Fall sind der Lehrer, die Lehre und der Schüler zu loben. ",
   "dn29:7.8": "Angenommen, jemand sagte zu einer solchen Schülerin: ",
   "dn29:7.9": "‚Die Ehrwürdige übt offensichtlich methodisch und wird die Methode erfolgreich zu Ende führen.‘ ",
   "dn29:7.10": "Derjenige, der jemanden dafür lobt, derjenige, der dafür gelobt wird, und derjenige, der durch das Lob noch mehr Energie aufrüttelt, sie alle schaffen viel Verdienst. ",
