--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -71,7 +71,7 @@
   "dn29:8.5": "Und warum? ",
   "dn29:8.6": "Weil sie denken: ‚Unser Lehrer war vollendet, ein vollkommen erwachter Buddha. Seine Lehre war gut erklärt, doch wir haben uns nicht nach der Bedeutung erkundigt, und die geistliche Übung wurde uns nicht vollständig enthüllt. ",
   "dn29:8.7": "Und dann ist unser Lehrer gestorben.‘ ",
-  "dn29:8.8": "Nach dem Tod eines solchen Lehrers werden die Schülerinnen von Gewissensnot gequält. ",
+  "dn29:8.8": "Nach dem Tod eines solchen Lehrers werden die Schüler von Gewissensnot gequält. ",
   "dn29:9.0": "4. Wenn Schüler keine Gewissensnot haben ",
   "dn29:9.1": "Dann erscheint da ein Lehrer in der Welt, vollendet, ein vollkommen erwachter Buddha. Die Lehre ist gut erklärt und vorgelegt, sie macht unabhängig, führt zum Frieden, ist von einem vollkommen erwachten Buddha verkündet. ",
   "dn29:9.2": "Die Schülerinnen haben sich nach der Bedeutung dieser guten Lehre erkundigt. Und die geistliche Übung, die in sich geschlossen und rein ist, wurde ihnen enthüllt und offengelegt, mit all ihren gesammelten Sprüchen, mit ihrer beweisbaren Grundlage, gut verkündet, wo immer es Götter und Menschen gibt. ",
