--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "an6.10:2.9": "einen edlen Schüler, der unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt er frei von Nöten. Er ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf den Buddha. ",
   "an6.10:3.1": "Dann besinnt sich da ein edler Schüler auf die Lehre: ",
   "an6.10:3.2": "‚Die Lehre ist vom Buddha gut erklärt – in diesem Leben sichtbar, unmittelbar wirksam, sie lädt zum Überprüfen ein, ist wert, beherzigt zu werden, sodass vernünftige Menschen sie selbst erkennen können.‘ ",
-  "an6.10:3.3": "Zu einer Zeit, zu der eine edle Schülerin sich auf die Lehre besinnt, ist ihr Geist nicht voller Gier, Hass und Täuschung. ",
+  "an6.10:3.3": "Zu einer Zeit, zu der ein edler Schüler sich auf die Lehre besinnt, ist sein Geist nicht voller Gier, Hass und Täuschung. ",
   "an6.10:3.4": "Zu dieser Zeit ist ihr Geist unbeirrbar, auf die Lehre ausgerichtet. ",
   "an6.10:3.5": "Eine edle Schülerin, deren Geist unbeirrbar ist, ist ergriffen von der Bedeutung und der Lehre und findet Freude im Zusammenhang mit der Lehre. ",
   "an6.10:3.6": "Wenn sie voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet sie Wonne. Und wenn sie voller Wonne ist, versenkt sich der Geist im Samādhi. ",
