--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "an6.10:3.5": "Ein edler Schüler, dessen Geist unbeirrbar ist, ist ergriffen von der Bedeutung und der Lehre und findet Freude im Zusammenhang mit der Lehre. ",
   "an6.10:3.6": "Wenn er voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet er Wonne. Und wenn er voller Wonne ist, versenkt sich der Geist im Samādhi. ",
   "an6.10:3.7": "Das nennt man ",
-  "an6.10:3.8": "eine edle Schülerin, die unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt sie frei von Nöten. Sie ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf die Lehre. ",
+  "an6.10:3.8": "einen edlen Schüler, der unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt er frei von Nöten. Er ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf die Lehre. ",
   "an6.10:4.1": "Dann besinnt sich da ein edler Schüler auf den Saṅgha: ",
   "an6.10:4.2": "‚Der Saṅgha der Schüler des Buddha übt gut, unmittelbar, nach der Methode und auf die richtige Art. Er besteht aus den vier Paaren, den acht Personen. Das ist der Saṅgha der Schüler des Buddha, und er ist einer den Göttern gewidmeten Gabe würdig, der Gastfreundschaft würdig, einer religiösen Gabe würdig, des Grußes mit zusammengelegten Händen würdig und ist das unübertreffliche Feld für Verdienst für die Welt.‘ ",
   "an6.10:4.3": "Zu einer Zeit, zu der ein edler Schüler sich auf den Saṅgha besinnt, ist sein Geist nicht voller Gier, Hass und Täuschung. ",
