--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "an6.10:4.6": "Wenn er voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet er Wonne. Und wenn er voller Wonne ist, versenkt sich der Geist im Samādhi. ",
   "an6.10:4.7": "Das nennt man ",
   "an6.10:4.8": "einen edlen Schüler, der unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt er frei von Nöten. Er ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf den Saṅgha. ",
-  "an6.10:5.1": "Dann besinnt sich da eine edle Schülerin auf ihr eigenes sittliches Verhalten, das ungebrochen ist, tadellos, makellos und unbeschädigt; es ist befreiend, wird von vernünftigen Menschen gepriesen, ist nicht fehlgeleitet und führt in die Versenkung. ",
+  "an6.10:5.1": "Dann besinnt sich da ein edler Schüler auf sein eigenes sittliches Verhalten, das ungebrochen ist, tadellos, makellos und unbeschädigt; es ist befreiend, wird von vernünftigen Menschen gepriesen, ist nicht fehlgeleitet und führt in die Versenkung. ",
   "an6.10:5.2": "Zu einer Zeit, zu der eine edle Schülerin sich auf ihr sittliches Verhalten besinnt, ist ihr Geist nicht voller Gier, Hass und Täuschung. ",
   "an6.10:5.3": "Zu dieser Zeit ist ihr Geist unbeirrbar, auf das sittliche Verhalten ausgerichtet. ",
   "an6.10:5.4": "Eine edle Schülerin, deren Geist unbeirrbar ist, ist ergriffen von der Bedeutung und der Lehre und findet Freude im Zusammenhang mit der Lehre. ",
