--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "an6.10:5.2": "Zu einer Zeit, zu der ein edler Schüler sich auf sein sittliches Verhalten besinnt, ist sein Geist nicht voller Gier, Hass und Täuschung. ",
   "an6.10:5.3": "Zu dieser Zeit ist sein Geist unbeirrbar, auf das sittliche Verhalten ausgerichtet. ",
   "an6.10:5.4": "Einen edlen Schüler, dessen Geist unbeirrbar ist, ist ergriffen von der Bedeutung und der Lehre und findet Freude im Zusammenhang mit der Lehre. ",
-  "an6.10:5.5": "Wenn sie voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet sie Wonne. Und wenn sie voller Wonne ist, versenkt sich der Geist im Samādhi. ",
+  "an6.10:5.5": "Wenn er voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet er Wonne. Und wenn er voller Wonne ist, versenkt sich der Geist im Samādhi. ",
   "an6.10:5.6": "Das nennt man ",
   "an6.10:5.7": "eine edle Schülerin, die unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt sie frei von Nöten. Sie ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf das sittliche Verhalten. ",
   "an6.10:6.1": "Dann besinnt sich da ein edler Schüler auf seine eigene Großzügigkeit: ",
