--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -36,7 +36,7 @@
   "an6.10:5.4": "Einen edlen Schüler, dessen Geist unbeirrbar ist, ist ergriffen von der Bedeutung und der Lehre und findet Freude im Zusammenhang mit der Lehre. ",
   "an6.10:5.5": "Wenn er voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet er Wonne. Und wenn er voller Wonne ist, versenkt sich der Geist im Samādhi. ",
   "an6.10:5.6": "Das nennt man ",
-  "an6.10:5.7": "eine edle Schülerin, die unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt sie frei von Nöten. Sie ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf das sittliche Verhalten. ",
+  "an6.10:5.7": "einen edlen Schüler, der unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt er frei von Nöten. Er ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf das sittliche Verhalten. ",
   "an6.10:6.1": "Dann besinnt sich da ein edler Schüler auf seine eigene Großzügigkeit: ",
   "an6.10:6.2": "‚Ich habe Glück, so großes Glück! ",
   "an6.10:6.3": "Unter denen, die vom Fleck des Geizes befleckt sind, lebe ich im Haus und habe den Fleck des Geizes entfernt; ich gebe großzügig her, habe eine offene Hand, freue mich am Loslassen, bin der Wohltätigkeit verpflichtet und liebe es, zu geben und zu teilen.‘ ",
