--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -46,7 +46,7 @@
   "an6.10:6.7": "Wenn er voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet er Wonne. Und wenn er voller Wonne ist, versenkt sich der Geist im Samādhi. ",
   "an6.10:6.8": "Das nennt man ",
   "an6.10:6.9": "einen edlen Schüler, der unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt sie frei von Nöten. Er ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf die Großzügigkeit. ",
-  "an6.10:7.1": "Dann besinnt sich da eine edle Schülerin auf die Gottheiten: ",
+  "an6.10:7.1": "Dann besinnt sich da ein edler Schüler auf die Gottheiten: ",
   "an6.10:7.2": "‚Es gibt die Götter der Vier Großen Könige, die Götter der Dreiunddreißig, die Yama-Götter, die Freudvollen Götter, die Götter, die gerne erschaffen, die Götter, die über die Schöpfungen anderer herrschen, die Götter aus Brahmās Gefolge und Götter, die noch darüber stehen. ",
   "an6.10:7.3": "Nachdem diese Gottheiten von hier abgeschieden sind, wurden sie aufgrund ihres Vertrauens, ihres sittlichen Verhaltens, ihrer Gelehrsamkeit, ihrer Großzügigkeit und ihrer Weisheit dort wiedergeboren. Auch ich besitze die gleiche Art von Vertrauen, sittlichem Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit.‘ ",
   "an6.10:7.8": "Zu einer Zeit, zu der eine edle Schülerin sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, ist ihr Geist nicht voller Gier, Hass und Täuschung. ",
