--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "an6.10:7.1": "Dann besinnt sich da ein edler Schüler auf die Gottheiten: ",
   "an6.10:7.2": "‚Es gibt die Götter der Vier Großen Könige, die Götter der Dreiunddreißig, die Yama-Götter, die Freudvollen Götter, die Götter, die gerne erschaffen, die Götter, die über die Schöpfungen anderer herrschen, die Götter aus Brahmās Gefolge und Götter, die noch darüber stehen. ",
   "an6.10:7.3": "Nachdem diese Gottheiten von hier abgeschieden sind, wurden sie aufgrund ihres Vertrauens, ihres sittlichen Verhaltens, ihrer Gelehrsamkeit, ihrer Großzügigkeit und ihrer Weisheit dort wiedergeboren. Auch ich besitze die gleiche Art von Vertrauen, sittlichem Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit.‘ ",
-  "an6.10:7.8": "Zu einer Zeit, zu der eine edle Schülerin sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, ist ihr Geist nicht voller Gier, Hass und Täuschung. ",
+  "an6.10:7.8": "Zu einer Zeit, zu der ein edler Schüler sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, ist sein Geist nicht voller Gier, Hass und Täuschung. ",
   "an6.10:7.9": "Zu dieser Zeit ist ihr Geist unbeirrbar, auf die Gottheiten ausgerichtet. ",
   "an6.10:7.10": "Eine edle Schülerin, deren Geist unbeirrbar ist, ist ergriffen von der Bedeutung und der Lehre und findet Freude im Zusammenhang mit der Lehre. ",
   "an6.10:7.11": "Wenn sie voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet sie Wonne. Und wenn sie voller Wonne ist, versenkt sich der Geist im Samādhi. ",
