--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an6.10:7.8": "Zu einer Zeit, zu der ein edler Schüler sich auf Vertrauen, sittliches Verhalten, Gelehrsamkeit, Großzügigkeit und Weisheit der Gottheiten und auf die gleichen Eigenschaften bei sich selbst besinnt, ist sein Geist nicht voller Gier, Hass und Täuschung. ",
   "an6.10:7.9": "Zu dieser Zeit ist sein Geist unbeirrbar, auf die Gottheiten ausgerichtet. ",
   "an6.10:7.10": "Ein edler Schüler, dessen Geist unbeirrbar ist, ist ergriffen von der Bedeutung und der Lehre und findet Freude im Zusammenhang mit der Lehre. ",
-  "an6.10:7.11": "Wenn sie voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet sie Wonne. Und wenn sie voller Wonne ist, versenkt sich der Geist im Samādhi. ",
+  "an6.10:7.11": "Wenn er voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet er Wonne. Und wenn er voller Wonne ist, versenkt sich der Geist im Samādhi. ",
   "an6.10:7.12": "Das nennt man ",
   "an6.10:7.13": "eine edle Schülerin, die unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt sie frei von Nöten. Sie ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf die Gottheiten. ",
   "an6.10:8.1": "Eine edle Schülerin, die die Frucht erlangt und die Anleitung verstanden hat, übt häufig diese Meditation.“ "
