--- a/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.10_translation-de-sabbamitta.json
@@ -55,5 +55,5 @@
   "an6.10:7.11": "Wenn er voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet er Wonne. Und wenn er voller Wonne ist, versenkt sich der Geist im Samādhi. ",
   "an6.10:7.12": "Das nennt man ",
   "an6.10:7.13": "einen edlen Schüler, der unter den Unausgeglichenen ausgeglichen lebt, unter denen, die in Not sind, lebt er frei von Nöten. Er ist in den Strom der Lehre eingetreten und entfaltet die Besinnung auf die Gottheiten. ",
-  "an6.10:8.1": "Eine edle Schülerin, die die Frucht erlangt und die Anleitung verstanden hat, übt häufig diese Meditation.“ "
+  "an6.10:8.1": "Ein edler Schüler, der die Frucht erlangt und die Anleitung verstanden hat, übt häufig diese Meditation.“ "
 }
